--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta http-equiv="Cache-Control" content="public, max-age=31536000" />
     <meta http-equiv="Pragma" content="cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta property="og:title" content="MindFlow" />
+    <meta property="og:title" content="T1chCoder | Portfolio" />
     <meta
       property="og:description"
       content="Showcase of coding projects, web development, and software solutions. Includes examples of frontend, backend, and fullstack work."
