--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       content="Showcase of coding projects, web development, and software solutions. Includes examples of frontend, backend, and fullstack work."
     />
     <meta property="og:image" content="/icons/32x32/logo.svg" />
-    <meta property="og:url" content="https://t1chcoder.com" />
+    <meta property="og:url" content="https://t1chcoder.github.io/portfolio/" />
     <meta property="og:site_name" content="T1chCoder | Portfolio" />
     <meta property="og:locale" content="en_US" />
     <script>
