--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="dark" style="overflow: hidden">
   <head>
     <title>T1chCoder | Portfolio</title>
-    <link rel="icon" type="image/svg+xml" href="/icons/32x32/logo.svg" />
-    <link rel="alternate icon" type="image/png" href="/icons/32x32/logo.png" />
-    <link rel="apple-touch-icon" href="/icons/192x192/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/portfolio/icons/32x32/logo.svg" />
+    <link rel="alternate icon" type="image/png" href="/portfolio/icons/32x32/logo.png" />
+    <link rel="apple-touch-icon" href="/portfolio/icons/192x192/logo.png" />
     <meta charset="UTF-8" />
     <meta
       name="viewport"
@@ -38,7 +38,7 @@
       property="og:description"
       content="Showcase of coding projects, web development, and software solutions. Includes examples of frontend, backend, and fullstack work."
     />
-    <meta property="og:image" content="/icons/32x32/logo.svg" />
+    <meta property="og:image" content="/portfolio/icons/32x32/logo.svg" />
     <meta property="og:url" content="https://t1chcoder.github.io/portfolio/" />
     <meta property="og:site_name" content="T1chCoder | Portfolio" />
     <meta property="og:locale" content="en_US" />
