--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       content="T1chCoder, portfolio, developer, programmer, software engineer, coding projects, web development, applications, frontend, backend, fullstack, open source, GitHub, JavaScript, TypeScript, React, Node.js"
     />
     <meta name="robots" content="index, follow" />
-    <meta name="author" content="T1chCoder" />
+    <meta name="author" content="Asadbek Jumabaev" />
     <meta name="copyright" content="© 2025 Portfolio — designed by T1chCoder" />
     <meta http-equiv="Content-Language" content="en" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
@@ -38,7 +38,7 @@
       property="og:description"
       content="Showcase of coding projects, web development, and software solutions. Includes examples of frontend, backend, and fullstack work."
     />
-    <meta property="og:image" content="/portfolio/icons/32x32/logo.svg" />
+    <meta property="og:image" content="/portfolio/icons/32x32/logo.png" />
     <meta property="og:url" content="https://t1chcoder.github.io/portfolio/" />
     <meta property="og:site_name" content="T1chCoder | Portfolio" />
     <meta property="og:locale" content="en_US" />
