--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
     <meta http-equiv="Cache-Control" content="public, max-age=31536000" />
     <meta http-equiv="Pragma" content="cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta property="og:title" content="T1chCoder | Portfolio" />
+    <meta property="og:title" content="Asadbek Jumabaev" />
     <meta
       property="og:description"
       content="Showcase of coding projects, web development, and software solutions. Includes examples of frontend, backend, and fullstack work."
     />
-    <meta property="og:image" content="/portfolio/icons/32x32/logo.png" />
+    <meta property="og:image" content="https://t1chcoder.github.io/portfolio/icons/32x32/logo.png" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://t1chcoder.github.io/portfolio/" />
     <meta property="og:site_name" content="T1chCoder | Portfolio" />
     <meta property="og:locale" content="en_US" />
